update toward plugin-free tag system
not done yet, working on JS

--- a/_posts/2016-02-04-omheining1.md
+++ b/_posts/2016-02-04-omheining1.md
@@ -3,9 +3,8 @@ layout: post
 title:	"Een omheining voor de Tora (I)"
 author:	Jaap Cramer
 #date:	7 Mei 2013
-tags:   mAvot 
+tags:   mAvot
 ---
-
 
 > Mozes ontving de Tora op de Sinai, en gaf het door aan Jozua; Jozua gaf het door aan de oudsten; de oudsten gaven het door aan de profeten; de profeten gaven het door aan de mannen van de grote synagoge. 
 > Zij deden drie uitspraken:
@@ -14,7 +13,7 @@ tags:   mAvot
 
 Het jodendom kent een keten van traditie. En deze traditie is niet alleen schriftelijk (het oude testament) maar ook mondeling. Bovenstaand citaat is het begin van het tractaat Spreuken der vaderen (Pirke Avot), uit de misjna, de schriftelijke neerslag van de mondelinge leer. 
 
-De laatste van de drie uitspraken fascineert me. _'Maak een omheining om de Tora.'_ Het beeld dat ik van het jodendom heb/had is vooral dat van veel onzinnige regeltjes. Wettische en hypocriete Farizeeen; denk bijvoorbeeld aan woorden van Jezus: 
+De laatste van de drie uitspraken fascineert me. _'Maak een omheining om de Tora.'_ Het beeld dat ik van het jodendom had is vooral dat van veel onzinnige regeltjes. Wettische en hypocriete Farizeeen; denk bijvoorbeeld aan woorden van Jezus: 
 
 > Ze bundelen alle voorschriften tot een zware last en leggen die de mensen op de schouders, terwijl ze zelf geen vinger uitsteken om die te verlichten.
 > <cite>Mat. 23:4</cite>
