--- a/_posts/2016-02-05-keten.md
+++ b/_posts/2016-02-05-keten.md
@@ -18,12 +18,8 @@ Dit trapsgewijze doorgeven doet denken aan de joodse keten van traditie. De mond
 > Mozes ontving de Tora op de Sinai, en gaf het door aan Jozua; Jozua gaf het door aan de oudsten; de oudsten gaven het door aan de profeten; de profeten gaven het door aan de mannen van de grote synagoge.
 > <cite> mAvot 1:1</cite>
 
+Het woord over kennisoverdracht dat Clemens van Alexandrië gebruik, παραδίδωμι, komt in diverse betekenissen voor in het Nieuwe Testament. Lukas 1:2 gebruikt het om de hem vertelde verslagen te beschrijven. En ook Paulus, 1 Cor 11:2 en 23, (παράδοσις) benoemt de traditie die hij heeft doorgekregen en nu zelf doorgeeft, bij de in instelling van het avondmaal.
 
+Het is geen exclusief christelijk woord, en beschrijft net zo goed tradities binnen het jodendom.
 
-Lukas 1:2. Lukas gebruikt dit woord (παραδίδωμι) om de hem vertelde verslagen te beschrijven
-
-1 Cor 11:2 en 23. (παράδοσις) Paulus noemt de traditie-overdracht, instelling avondmaal.
-
-
-
-Het woord gebruikt in Avot, wordt weinig gebruikt. Hebreeuws MSR (2x OT in andere betekenis. msrt in Ezek 20:37, traditie. Verder in Qumran)
+Het woord gebruikt in Avot, wordt weinig gebruikt. Hebreeuws מָסַר (2x OT in andere betekenis. msrt in Ezek 20:37, traditie. Verder in Qumran, wisselend hebreeuws en aramees. o.m. CD3:3
