minor edit, tags and post

--- a/_posts/2016-02-04-omheining1.md
+++ b/_posts/2016-02-04-omheining1.md
@@ -2,7 +2,6 @@
 layout: post
 title:	"Een omheining voor de Tora (I)"
 author:	Jaap Cramer
-#date:	7 Mei 2013
 tags:   mAvot
 ---
 
@@ -11,7 +10,7 @@ tags:   mAvot
 > Wees bedachtzaam in je oordeel, maak veel discipelen, en maak een omheining om de Tora.
 > <cite>mAvot 1:1</cite>
 
-Het jodendom kent een keten van traditie. En deze traditie is niet alleen schriftelijk (het oude testament) maar ook mondeling. Bovenstaand citaat is het begin van het tractaat Spreuken der vaderen (Pirke Avot), uit de misjna, de schriftelijke neerslag van de mondelinge leer. 
+Het jodendom kent een [keten van traditie](/judaica{% post_url 2016-02-05-keten %}). En deze traditie is niet alleen schriftelijk (het oude testament) maar ook mondeling. Bovenstaand citaat is het begin van het tractaat Spreuken der vaderen (Pirke Avot), uit de misjna, de schriftelijke neerslag van de mondelinge leer. 
 
 De laatste van de drie uitspraken fascineert me. _'Maak een omheining om de Tora.'_ Het beeld dat ik van het jodendom had is vooral dat van veel onzinnige regeltjes. Wettische en hypocriete Farizeeen; denk bijvoorbeeld aan woorden van Jezus: 
 
@@ -31,17 +30,16 @@ In een commentaar op Pirke Avot wordt gevraagd naar het eerste moment dat mensen
 [^AvotDeRbNatanLink]: Te vinden op <http://mordechai.jewishart77.fastmail.fm/Midrasjvandeweek2.htm>
 
 Adam heeft het verbod niet te eten vergroot tot _niet eten_ en _niet aanraken_, en zo vertelt Eva dat dus aan de slang.  
-En ergens is het ook logisch. Om van de vrucht te eten, zul je de vrucht eerst moeten aanraken. Toch is de commentator van Pirke Avot niet positief over deze omheining. Het maakte Eva namelijk kwetsbaar voor de slang, die listig tegen haar zegt: _'Je zult niet sterven als je de vrucht aanraakt'_  
-Feitelijk heeft God dat inderdaad niet gezegd; en daar ging het mis.
+En ergens is het ook logisch. Om van de vrucht te eten, zul je de vrucht eerst moeten aanraken. Toch is de commentator van Pirke Avot niet positief over deze omheining. Het maakte Eva namelijk kwetsbaar voor de slang, die listig tegen haar zegt: _'Je zult niet sterven als je de vrucht aanraakt'_ Feitelijk heeft God dat inderdaad niet gezegd; en toen ging het dus mis.
 
-Ook in een andere joodse bron (Midrasj Beresjiet Rabbah, een commentaar op Genesis) volgt een soortgelijke redenatie.
+Ook een andere joodse bron (Midrasj Beresjiet Rabbah, een commentaar op Genesis) volgt een soortgelijke redenatie.
 
 > 'Maar van de vruchten van de boom die in het midden van de tuin staat heeft God gezegd: Jullie mogen daarvan niet eten en jullie mogen hem niet aanraken, opdat jullie niet sterven' (Gen. 3:3).  
 > Zo is er geschreven: 'Voeg aan Zijn woorden niet toe, opdat Hij je niet terechtwijst en jij leugenachtig wordt bevonden' (Spr. 30:3).  
 > Rabbi Chijja sprak: 'Dat betekent dat je de omheining niet tot meer mag maken dan de kern van de zaak, opdat hij niet omvalt en de beplantingen verwoest.' Aldus sprak de Heilige, Hij zij gezegend: 'Want op de dag dat je ervan eet, zullen jullie sterven', maar zij sprak daarentegen niet zo, maar 'God heeft gezegd: jullie mogen daarvan niet eten en jullie mogen hem niet aanraken.' Toen de slang haar de boom zag passeren, greep hij haar en duwde hij haar er tegenaan.  Hij sprak: 'Evenals je niet sterft door hem te benaderen (en aan te raken), zul je ook niet sterven door van hem te eten.' [^AvotDeRbNatanLink]
 
 De moraal van het verhaal is: niet elke omheining is goed.  
-Het beeld van Farizeeen die zomaar wat wetten aanscherpen klopt dus ook niet. En zoals uit de teksten hierboven blijkt hebben ze ook door dat er risico's aan verbonden zijn. Tegelijk voelen joden zich geroepen om de wet te beschermen; een heilig verlangen om niet te zondigen.  
+Het beeld van Farizeeen die zonder menselijke maat zware wetten bundelen klopt gelukkig niet. En zoals uit de teksten hierboven blijkt hebben ze door dat er risico's aan verbonden zijn. Tegelijk voelen joden zich geroepen om de wet te beschermen; een heilig verlangen om niet te zondigen.  
 
 Ik wil hun drijfveer begrijpen, en ik hoop dat dat begrip ook mijn begrip van het nieuwe testament vergroot. Jezus, de eerste christenen, Paulus, waren tenslotte ook Joden.  
 Een laatste opmerking over Paulus nog. Als ik dit joodse verhaal over de zondeval lees moet ik denken aan Rom. 7:11: _'De zonde heeft gebruik gemaakt van het gebod: ze heeft mij misleid en mij door het gebod gedood.'_
